# wled

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  config.example  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_installation.py
.cursor/rules/: python.mdc
.github/workflows/: ci-cd.yml  python-ci.yml
src/: __init__.py  app.py  wled_client.py
static/: app.js
templates/: index.html
tests/: __init__.py  test_wled_client.py
